# durable

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  NOTICE  README.md  deny.toml  docker-compose.yml  sqlx.toml
.cargo/: config.toml
.claude/commands/: make-migration.md  validate-schema.md
.config/: nextest.toml
.github/: zizmor.yml
.github/workflows/: benchmark.yml  ci.yml  security.yml
benches/: README.md  checkpoint.rs  concurrency.rs  throughput.rs
benches/common/: mod.rs  setup.rs  tasks.rs
ci/: cla-signatures.json
dev/bench/: data.js
scripts/: validate-schema
sql/: schema.sql
src/: client.rs  context.rs  cron.rs  error.rs  heartbeat.rs  lib.rs  task.rs  types.rs  worker.rs
src/postgres/migrations/: 20251202002136_initial_setup.sql  20251205000000_add_claim_task_indexes.sql  20251206231138_fanout.sql  20260126000000_add_event_metadata.sql  20260126135558_event_payload_structure.sql  20260129120000_enforce_lease_on_checkpoint.sql  20260129181016_add_force_fail_to_fail_run.sql  20260221000000_add_get_task_result.sql  20260228000000_add_cron_schedules.sql  20260317153556_add_count_unclaimed_ready_tasks.sql  20260409000000_add_idempotency_key.sql
src/telemetry/: config.rs  metrics.rs  mod.rs  propagation.rs
tests/: blocked_test.rs  checkpoint_test.rs  concurrency_test.rs  count_unclaimed_test.rs  crash_test.rs  cron_test.rs  event_test.rs  execution_test.rs  fanout_test.rs  lease_test.rs  lock_order_test.rs  partition_test.rs  polling_test.rs  queue_test.rs  retry_test.rs  spawn_test.rs  telemetry_test.rs
tests/common/: helpers.rs  mod.rs  tasks.rs
