[package]
name = "durable"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = ["sqlx-toml", "postgres", "runtime-tokio", "chrono", "tls-rustls", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
hostname = "0.4"
rand = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "concurrency"
harness = false
