[package]
name = "durable"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88.0"

[lib]
bench = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
doc_overindented_list_items = "allow"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0-alpha.1", features = ["sqlx-toml", "postgres", "runtime-tokio", "chrono", "tls-rustls", "uuid", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
tracing = "0.1"
hostname = "0.4"
rand = "0.9"
futures = "0.3.31"
blake3 = "1.8.2"

# Optional telemetry dependencies
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", optional = true }
metrics = { version = "0.24", optional = true }

[features]
default = []
telemetry = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:metrics",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tracing-fluent-assertions = "0.3"
metrics-util = { version = "0.18", features = ["debugging"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }
ordered-float = "4"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "checkpoint"
harness = false

[[bench]]
name = "concurrency"
harness = false
